tests/errors/missing_semicolon.js
// Error: Missing semicolon
function missing_semicolon() {
  let x = 10
  return x;
}

missing_semicolon();
